<resources>
    <string name="app_name">Pan Demo</string>

    <string name="accessibility_service">Pan Demo Accessibility Service</string>
    <string name="auto_reply_service">Pan Demo WeChat Auto Reply</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_anim">AnimActivity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_inflater_factory">InflaterFactoryActivity</string>
    <string name="title_activity_volley">VolleyActivity</string>
    <string name="title_activity_ok_http">OkHttpActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_constraint_layout">ConstraintLayout</string>
    <string name="accessibility_service_summary">
        无障碍辅助功能：\n
            1.Pan Demo Accessibility Service \n
                \t\t 点击apk会自动安装无需点击下一步，只支持安卓原生系统。\n\n
            2.Pan Demo WeChat Auto Reply \n
                \t\t 微信自动回复功能，当通知栏有微信通知，会自动回复“正在忙，稍后回复你”\n\n

        注意：需要到系统无障碍服务中开启相应服务。
    </string>


    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>

    <string name="hide_next_time">下次不再显示</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="i_know">我知道了</string>
    <string name="please_wait">请稍后...</string>
    <string name="behavior_content">com.example.pan.mydemo.behavior.NestedScrollContentBehavior</string>
    <string name="web_intent_text">点击下方地址,会先关闭当前页面，并用手机浏览器打开下方地址（App内部共享的HTML文件），点击open会自动再次启动本页面，并取得网页url的内容（类似浏览器打开淘宝链接，会启动淘宝App）</string>

    <string-array name="magic_effect">
        <item>RotateDown</item>
        <item>RotateUp</item>
        <item>RotateY</item>
        <item>Standard</item>
        <item>Alpha</item>
        <item>ScaleIn</item>
        <item>RotateDown and Alpha</item>
        <item>RotateDown and Alpha And ScaleIn</item>
        <item>Zoom and OutPage</item>
    </string-array>
    <string name="image_header">%1$s by %2$s</string>

        <string name="task_count">当前任务数：%d</string>
</resources>
