<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/alert_dialog_top_background"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/custom_alert_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/normal_text_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/custom_alert_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="false"
            android:textColor="@color/normal_text_color"
            android:textSize="15sp"
            android:visibility="gone"

            />

        <LinearLayout
            android:id="@+id/custom_alert_dialog_content_container"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="gone"

            >
        </LinearLayout>

        <CheckBox
            android:id="@+id/custom_alert_dialog_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:button="@null"
            android:drawableLeft="@drawable/check_box_selector"
            android:drawablePadding="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/hide_next_time"
            android:textColor="@color/normal_text_color"
            android:visibility="gone"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/custom_alert_dialog_multi_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <Button
                android:id="@+id/custom_alert_dialog_positive_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_retangle_btn_selector"
                android:padding="0dp"
                android:text="@string/common_confirm"
                android:textColor="@color/common_white"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/custom_alert_dialog_negative_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_retangle_btn_selector"
                android:text="@string/common_cancel"
                android:textColor="@color/common_white"
                android:textSize="20sp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/custom_alert_dialog_comfirm_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/full_retangle_btn_selector"
            android:text="@string/i_know"
            android:textColor="@color/common_white"
            android:textSize="20sp"
            android:visibility="gone"

            />

        <LinearLayout
            android:id="@+id/custom_alert_dialog_comfirm_btn_mark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/full_retangle_btn_normal"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/custom_alert_dialog_login_wait_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_wait_animation"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/please_wait"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
